// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Category.svelte > should render using default props 1`] = `
<div>
  <section>
    <!---->
    <rk-tabs
      class="flex w-full "
      role="listbox"
      tabindex="0"
    >
      <rk-tab>
        <!---->
        <!---->
         
        <p>
          one
        </p>
        <!---->
        <!---->
         
        <!---->
      </rk-tab>
      <rk-tab>
        <!---->
        <!---->
         
        <p>
          two
        </p>
        <!---->
        <!---->
         
        <!---->
      </rk-tab>
      <rk-tab>
        <!---->
        <!---->
         
        <p>
          three
        </p>
        <!---->
        <!---->
         
        <!---->
      </rk-tab>
      <!---->
       
      <!---->
    </rk-tabs>
    
    <!---->
     
    <field-layout
      class="vertical"
    >
      <!---->
    </field-layout>
  </section>
  
</div>
`;

exports[`Category.svelte > should render using specified class 1`] = `
<div>
  <section
    class="custom-class"
  >
    <!---->
    <rk-tabs
      class="flex w-full "
      role="listbox"
      tabindex="0"
    >
      <rk-tab>
        <!---->
        <!---->
         
        <p>
          one
        </p>
        <!---->
        <!---->
         
        <!---->
      </rk-tab>
      <rk-tab>
        <!---->
        <!---->
         
        <p>
          two
        </p>
        <!---->
        <!---->
         
        <!---->
      </rk-tab>
      <rk-tab>
        <!---->
        <!---->
         
        <p>
          three
        </p>
        <!---->
        <!---->
         
        <!---->
      </rk-tab>
      <!---->
       
      <!---->
    </rk-tabs>
    
    <!---->
     
    <field-layout
      class="vertical"
    >
      <!---->
    </field-layout>
  </section>
  
</div>
`;

exports[`Category.svelte > should render using specified class 2`] = `
<div>
  <section
    class="custom-class-2"
  >
    <!---->
    <rk-tabs
      class="flex w-full "
      role="listbox"
      tabindex="0"
    >
      <rk-tab>
        <!---->
        <!---->
         
        <p>
          one
        </p>
        <!---->
        <!---->
         
        <!---->
      </rk-tab>
      <rk-tab>
        <!---->
        <!---->
         
        <p>
          two
        </p>
        <!---->
        <!---->
         
        <!---->
      </rk-tab>
      <rk-tab>
        <!---->
        <!---->
         
        <p>
          three
        </p>
        <!---->
        <!---->
         
        <!---->
      </rk-tab>
      <!---->
       
      <!---->
    </rk-tabs>
    
    <!---->
     
    <field-layout
      class="vertical"
    >
      <!---->
    </field-layout>
  </section>
  
</div>
`;

exports[`Category.svelte > should render using specified type 1`] = `
<div>
  <section>
    <!---->
    <rk-tabs
      class="flex w-full "
      role="listbox"
      tabindex="0"
    >
      <rk-tab>
        <!---->
        <!---->
         
        <p>
          one
        </p>
        <!---->
        <!---->
         
        <!---->
      </rk-tab>
      <rk-tab>
        <!---->
        <!---->
         
        <p>
          two
        </p>
        <!---->
        <!---->
         
        <!---->
      </rk-tab>
      <rk-tab>
        <!---->
        <!---->
         
        <p>
          three
        </p>
        <!---->
        <!---->
         
        <!---->
      </rk-tab>
      <!---->
       
      <!---->
    </rk-tabs>
    
    <!---->
     
    <field-layout
      class="horizontal"
    >
      <!---->
    </field-layout>
  </section>
  
</div>
`;

exports[`Category.svelte > should render using specified type 2`] = `
<div>
  <section>
    <!---->
    <rk-tabs
      class="flex w-full "
      role="listbox"
      tabindex="0"
    >
      <rk-tab>
        <!---->
        <!---->
         
        <p>
          one
        </p>
        <!---->
        <!---->
         
        <!---->
      </rk-tab>
      <rk-tab>
        <!---->
        <!---->
         
        <p>
          two
        </p>
        <!---->
        <!---->
         
        <!---->
      </rk-tab>
      <rk-tab>
        <!---->
        <!---->
         
        <p>
          three
        </p>
        <!---->
        <!---->
         
        <!---->
      </rk-tab>
      <!---->
       
      <!---->
    </rk-tabs>
    
    <!---->
     
    <field-layout
      class="section"
    >
      <!---->
    </field-layout>
  </section>
  
</div>
`;

exports[`Category.svelte > should render with alternative navigator 1`] = `
<div>
  <section>
    <!---->
    <!---->
    <rk-switch
      aria-disabled="false"
      aria-label="Toggle Switch"
      aria-orientation="horizontal"
      role="listbox"
      tabindex="0"
    >
      <rk-item
        aria-selected="false"
        class="relative"
        data-path="0"
        role="option"
      >
        <!---->
         
        <!---->
      </rk-item>
      <rk-item
        aria-selected="false"
        class="relative"
        data-path="1"
        role="option"
      >
        <!---->
         
        <!---->
      </rk-item>
      <rk-item
        aria-selected="false"
        class="relative"
        data-path="2"
        role="option"
      >
        <!---->
         
        <!---->
      </rk-item>
      
    </rk-switch>
    
    
    <!---->
     
    <field-layout
      class="vertical"
    >
      <!---->
    </field-layout>
  </section>
  
</div>
`;

exports[`Category.svelte > should render with alternative navigator 2`] = `
<div>
  <section>
    <!---->
    <rk-tabs
      class="flex w-full "
      role="listbox"
      tabindex="0"
    >
      <rk-tab>
        <!---->
        <!---->
         
        <p>
          one
        </p>
        <!---->
        <!---->
         
        <!---->
      </rk-tab>
      <rk-tab>
        <!---->
        <!---->
         
        <p>
          two
        </p>
        <!---->
        <!---->
         
        <!---->
      </rk-tab>
      <rk-tab>
        <!---->
        <!---->
         
        <p>
          three
        </p>
        <!---->
        <!---->
         
        <!---->
      </rk-tab>
      <!---->
       
      <!---->
    </rk-tabs>
    
    <!---->
     
    <field-layout
      class="vertical"
    >
      <!---->
    </field-layout>
  </section>
  
</div>
`;

exports[`Category.svelte > should render with extra props 1`] = `
<div>
  <section>
    <!---->
    <rk-tabs
      class="flex w-full  justify-center"
      role="listbox"
      tabindex="0"
    >
      <rk-tab>
        <!---->
        <!---->
         
        <p>
          one
        </p>
        <!---->
        <!---->
         
        <!---->
      </rk-tab>
      <rk-tab>
        <!---->
        <!---->
         
        <p>
          two
        </p>
        <!---->
        <!---->
         
        <!---->
      </rk-tab>
      <rk-tab>
        <!---->
        <!---->
         
        <p>
          three
        </p>
        <!---->
        <!---->
         
        <!---->
      </rk-tab>
      <!---->
       
      <!---->
    </rk-tabs>
    
    <!---->
     
    <field-layout
      class="vertical"
    >
      <!---->
    </field-layout>
  </section>
  
</div>
`;

exports[`Category.svelte > should render with extra props 2`] = `
<div>
  <section>
    <!---->
    <rk-tabs
      class="flex w-full justify-end"
      role="listbox"
      tabindex="0"
    >
      <rk-tab>
        <!---->
        <!---->
         
        <p>
          one
        </p>
        <!---->
        <!---->
         
        <!---->
      </rk-tab>
      <rk-tab>
        <!---->
        <!---->
         
        <p>
          two
        </p>
        <!---->
        <!---->
         
        <!---->
      </rk-tab>
      <rk-tab>
        <!---->
        <!---->
         
        <p>
          three
        </p>
        <!---->
        <!---->
         
        <!---->
      </rk-tab>
      <!---->
       
      <!---->
    </rk-tabs>
    
    <!---->
     
    <field-layout
      class="vertical"
    >
      <!---->
    </field-layout>
  </section>
  
</div>
`;
